--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Tech Innovators Conference 2024</title>
+    <title>About TechCon 2024</title>
 </head>
 <body>
     <!-- Header -->
     <header>
-        <h1>Tech Innovators Conference 2024</h1>
+        <h1>About TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -18,29 +18,71 @@
         </nav>
     </header>
 
-    <!-- Main -->
+    <!-- Main Content -->
     <main>
-        <section>
-            <h2>Welcome to the Tech Innovators Conference</h2>
+        <!-- History Section -->
+        <article>
+            <h2>Our History</h2>
             <p>
-                Join us at the Tech Innovators Conference 2024, where industry leaders, 
-                developers, and entrepreneurs come together to explore the latest 
-                innovations in technology and shape the future of digital transformation.
+                TechCon began in 2010 as a small gathering of technology enthusiasts 
+                and has since grown into one of the premier conferences for innovators, 
+                startups, and industry leaders. Each year, we bring together thousands 
+                of participants from around the globe to share knowledge and shape the 
+                future of technology.
             </p>
+            <img src="history.jpg" alt="Historical photo of the first TechCon conference" width="500">
+        </article>
 
-            <!-- Embedded promotional video -->
-            <video width="600" controls>
-                <source src="promo.mp4" type="video/mp4">
-                <track src="promo_subtitles.vtt" kind="subtitles" srclang="en" label="English">
-                Your browser does not support the video tag. Here’s a brief description: 
-                This video highlights the key themes and speakers of the conference.
-            </video>
-        </section>
+        <!-- Mission Section -->
+        <article>
+            <h2>Our Mission</h2>
+            <p>
+                At TechCon, our mission is to inspire and empower individuals and 
+                organizations to drive positive change through technology. We aim to 
+                provide a platform where ideas are shared, collaborations are formed, 
+                and groundbreaking innovations are unveiled.
+            </p>
+            <img src="mission.jpg" alt="Motivational image representing innovation and collaboration" width="500">
+        </article>
+
+        <!-- Past Speakers Section -->
+        <article>
+            <h2>Notable Past Speakers</h2>
+            <p>Over the years, TechCon has hosted some of the brightest minds in the industry:</p>
+
+            <div>
+                <img src="speaker1.jpg" alt="Portrait of Dr. Jane Smith, AI researcher" width="200">
+                <h3>Dr. Jane Smith</h3>
+                <p>
+                    A leading researcher in Artificial Intelligence, Dr. Smith’s keynote on 
+                    ethical AI development has inspired countless startups and enterprises 
+                    worldwide.
+                </p>
+            </div>
+
+            <div>
+                <img src="speaker2.jpg" alt="Portrait of Mr. Alex Johnson, cybersecurity expert" width="200">
+                <h3>Mr. Alex Johnson</h3>
+                <p>
+                    As a renowned cybersecurity expert, Mr. Johnson highlighted the importance 
+                    of data privacy in an increasingly connected world.
+                </p>
+            </div>
+
+            <div>
+                <img src="speaker3.jpg" alt="Portrait of Ms. Maria Lopez, tech entrepreneur" width="200">
+                <h3>Ms. Maria Lopez</h3>
+                <p>
+                    A celebrated entrepreneur, Ms. Lopez shared her journey of building one 
+                    of the fastest-growing green tech startups of the decade.
+                </p>
+            </div>
+        </article>
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>Copyright &copy; 2024 Tech Innovators Conference</p>
+        <p>Copyright &copy; 2024 TechCon 2024</p>
     </footer>
 </body>
 </html>
